# clubs

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: admins.py  attendance.py  auth.py  backups.py  dashboard.py  payments.py  public.py  reports.py  students.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  auth.tsx  index.css  invoice.ts  monthlyReport.ts  statement.ts  types.ts  utils.ts
frontend/src/components/: AttendanceBadge.tsx  Carnet.tsx  GlobalSearch.tsx  Layout.tsx  PageHeader.tsx  PaymentBadge.tsx  Protected.tsx  StudentForm.tsx  StudentPhoto.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Payments.tsx  PublicCarnet.tsx  StudentDetail.tsx  Students.tsx
frontend/src/pages/admin/: AdminsPage.tsx  BackupsPage.tsx
frontend/src/pages/attendance/: AttendanceHistory.tsx  AttendanceSheet.tsx
frontend/src/pages/payments/: PaymentsList.tsx
frontend/src/pages/reports/: MonthlyFinancial.tsx
frontend/src/pages/students/: StudentCarnet.tsx  StudentDetail.tsx  StudentEdit.tsx  StudentInvoice.tsx  StudentNew.tsx  StudentStatement.tsx  StudentsList.tsx
